# Understudy_Agent_MCP_Copilot_Cowork

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
api/: __init__.py  app.py
core/: __init__.py  bucketing.py  concurrency.py  event_log.py  gatekeeper.py  projections.py  risk_policy.py  settings.py  trust_math.py
crew/: __init__.py  capture.py  graph.py  loop.py  model_client.py  model_router.py  playbook.py  playwright_bridge.py  reasoning.py  state.py
crew/agents/: __init__.py  appraiser.py  hands.py  inspector.py  mentor.py  planner.py  scribe.py  watcher.py
integrations/: __init__.py  crm.py
mcp_server/: __init__.py  server.py
packaging/: __init__.py  build_plugin.py  manifest.template.json
simulations/: __init__.py  crew_demo.py  harness.py
tests/: __init__.py  test_bucketing.py  test_capture.py  test_concurrency.py  test_crm.py  test_event_log.py  test_gatekeeper.py  test_install.py  test_loop.py  test_model_client.py  test_playwright_bridge.py  test_projections.py  test_trust_math.py
